--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <nav> Inicio <br> Actitudes <br> Autobiografía </nav>
   <h1>Esta Semana he aprendido mucho</h1>
-  <section>
+  <section class="section1">
     <body>
       <p>Cosas que he aprendido</p>
       <ul>He aprendido a hacer listas con puntos:
@@ -25,6 +25,9 @@
           <li>Aprendí cosas que ignoraba</li>
           <li>Me gusta aprender</li>
       </ol>
+  </section>
+  <section class="section2">
+    <h2>Estamos avanzando</h2>
   </section>
   </body>
   <footer>Elías Cando &copy; All Rights Reserved </footer>
