--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Hola Soy Elias!</title>
   </head>
+  <style media="screen">
+    .section1 {
+      background-color: green;
+    }
+  </style>
   <nav> Inicio <br> Actitudes <br> Autobiografía </nav>
   <h1>Esta Semana he aprendido mucho</h1>
   <section class="section1">
