--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     .section1 {
       background-color: green;
     }
+   .redessociales {
+      list-style: none;
+    }
+    a:link, a:visited {
+        text-decoration: none;
+        background-color: #424242;
+        color: #FFFFFF;
+        display: block;
+        width: 150px;
+        text-align: center;
+        margin-bottom: 1px;
+      }
+      a:hover, a:active {
+        background-color: #151515;
+        color: #FFFFFF;
+      }
   </style>
   <nav> Inicio <br> Actitudes <br> Autobiografía </nav>
   <h1>Esta Semana he aprendido mucho</h1>
@@ -35,6 +51,14 @@
     <h2>Estamos avanzando</h2>
   </section>
   </body>
-  <footer>Elías Cando &copy; All Rights Reserved </footer>
+  <footer>
+    <ul class="redessociales">
+        <h5 class="sigueme">Sigueme en mis redes sociales</h5>
+        <li> <a href="https://twitter.com/eliasc_j" target="_blank"> Twitter </a> </li>
+        <li> <a href= "https://www.linkedin.com/in/eliascando/" target="_blank"> Linkedin </a> </li>
+        <li> <a href="https://github.com/eliascando" target="_blank"> GitHub </a></li>
+    </ul>
+
+    Elías Cando &copy; All Rights Reserved </footer>
 
 </html>
