--- a/index.html
+++ b/index.html
@@ -3,31 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Hola Soy Elias!</title>
+    <link rel="stylesheet" href="style.css">
   </head>
-  <style media="screen">
-    .section1 {
-      background-color: green;
-    }
-   .sigueme {
-
-   }
-   .redessociales {
-      list-style: none;
-    }
-    a:link, a:visited {
-        text-decoration: none;
-        background-color: #424242;
-        color: #FFFFFF;
-        display: block;
-        width: 150px;
-        text-align: center;
-        margin-bottom: 1px;
-      }
-      a:hover, a:active {
-        background-color: #151515;
-        color: #FFFFFF;
-      }
-  </style>
   <nav> Inicio <br> Actitudes <br> Autobiografía </nav>
   <h1>Esta Semana he aprendido mucho</h1>
   <section class="section1">
