--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <nav> Inicio <br> Actitudes <br> Autobiografía </nav>
   <h1>Esta Semana he aprendido mucho</h1>
   <section class="section1">
+    <p>Hola mi nombre es Elías Cando, tengo 20 años y vivo en Babahoyo, soy estudiante de la <b>Universidad de Guayaquil</b> y actualmente estoy en el primer semestre
+      de la carrera de <b>Ingeniera de Software</b>, y aspiro a convertirme en el corto plazo en un desarrollador web</p>
+    <p>Estoy tomando un curso de HTML, CSS y JavaScrip en Coursera, voy a aprender mucho y ya voy una semana</p>
+  </section>
+
+  <section class="section2">
     <body>
       <p>Cosas que he aprendido</p>
       <ul>He aprendido a hacer listas con puntos:
@@ -27,18 +33,21 @@
           <li>Me gusta aprender</li>
       </ol>
   </section>
-  <section class="section2">
+  <section class="section3">
     <h2>Estamos avanzando</h2>
   </section>
   </body>
-  <footer>
-    <ul class="redessociales">
-        <h5 class="sigueme">Sigueme en mis redes sociales</h5>
+  <section class="redessociales">
+    <h5>Sigueme en mis redes sociales</h5>
+    <ul class="sigueme">
         <li> <a href="https://twitter.com/eliasc_j" target="_blank"> Twitter </a> </li>
         <li> <a href= "https://www.linkedin.com/in/eliascando/" target="_blank"> Linkedin </a> </li>
         <li> <a href="https://github.com/eliascando" target="_blank"> GitHub </a></li>
     </ul>
-
-    Elías Cando &copy; All Rights Reserved </footer>
+  </section>
+  <footer class="footer">
+    <q>Disfruta el camino, levanta al caido y aprende sobre lo concluido</q> <br>
+    Elías Cando &copy; All Rights Reserved
+  </footer>
 
 </html>
