--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hola Soy Elias!</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <nav> Inicio <br> Actitudes <br> Autobiografía </nav>
+  <nav> <a href="index.html"> Inicio </a> <a href="actitudes.html"> Actitudes </a> <a href="autobiografia.html"> Autobiografía </a> </nav>
   <h1>Esta Semana he aprendido mucho</h1>
   <section class="section1">
     <p>Hola mi nombre es Elías Cando, tengo 20 años y vivo en Babahoyo, soy estudiante de la <b>Universidad de Guayaquil</b> y actualmente estoy en el primer semestre
@@ -34,20 +34,19 @@
       </ol>
   </section>
   <section class="section3">
-    <h2>Estamos avanzando</h2>
+    <h2>Estamos avanzando día a día</h2>
   </section>
   </body>
   <section class="redessociales">
-    <h5>Sigueme en mis redes sociales</h5>
-    <ul class="sigueme">
-        <li> <a href="https://twitter.com/eliasc_j" target="_blank"> Twitter </a> </li>
-        <li> <a href= "https://www.linkedin.com/in/eliascando/" target="_blank"> Linkedin </a> </li>
-        <li> <a href="https://github.com/eliascando" target="_blank"> GitHub </a></li>
-    </ul>
+    <h5>Sigueme en mis redes sociales</h5><br>
+        <a href="https://twitter.com/eliasc_j" target="_blank"> Twitter </a>
+        <a href= "https://www.linkedin.com/in/eliascando/" target="_blank"> Linkedin </a>
+        <a href="https://github.com/eliascando" target="_blank"> GitHub </a>
   </section>
-  <footer class="footer">
-    <q>Disfruta el camino, levanta al caido y aprende sobre lo concluido</q> <br>
-    Elías Cando &copy; All Rights Reserved
+  <br>
+  <footer>
+    <q>Disfruta el camino, levanta al caido y aprende sobre lo concluido</q><br>
+    Elías Cando &copy; Todos Los Derechos Reservados
   </footer>
 
 </html>
