Just another change

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <section class="section2">
     <body>
       <p>Cosas que he aprendido</p>
-      <ul>He aprendido a hacer listas con puntos:
+      <ul class="unordered">He aprendido a hacer listas con puntos:
           <li>html</li>
           <li>Validar en codigo en 3WC</li>
           <li>semántica</li>
@@ -27,7 +27,7 @@
             </ul>
          <li>Eso es todo con Listas Desordenadas</li>
       </ul>
-      <ol>Con listas ordenadas he aprendido mucho tambien:
+      <ol class="ordered">Con listas ordenadas he aprendido mucho tambien:
           <li>Como hacer una correcta distribución del codigo</li>
           <li>Aprendí cosas que ignoraba</li>
           <li>Me gusta aprender</li>
