--- a/actitudes.html
+++ b/actitudes.html
@@ -2,8 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Actitudes</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/bootsrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <nav> <a href="index.html"> Inicio </a> <a href="actitudes.html"> Actitudes </a> <a href="autobiografia.html"> Autobiografía </a> </nav>
   <h1>Vida Escolar</h1>
