--- a/index.html
+++ b/index.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!--Meta declarations-very important-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hola Soy Elias!</title>
     <link rel="stylesheet" href="css/bootsrap.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <nav> <a href="index.html"> Inicio </a> <a href="actitudes.html"> Actitudes </a> <a href="autobiografia.html"> Autobiografía </a> </nav>
+<body>
+  <!--This scripts are very important for work-->
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/bootsrap.min.js"></script>
+    <script src="js/script.js"></script>
+<nav> <a href="index.html"> Inicio </a> <a href="actitudes.html"> Actitudes </a> <a href="autobiografia.html"> Autobiografía </a> </nav>
   <h1>Esta Semana he aprendido mucho</h1>
   <section class="section1">
     <p>Hola mi nombre es Elías Cando, tengo 20 años y vivo en Babahoyo, soy estudiante de la <b>Universidad de Guayaquil</b> y actualmente estoy en el primer semestre
       de la carrera de <b>Ingeniera de Software</b>, y aspiro a convertirme en el corto plazo en un desarrollador web</p>
     <p>Estoy tomando un curso de HTML, CSS y JavaScrip en Coursera, voy a aprender mucho y ya voy una semana</p>
   </section>
-
   <section class="section2">
-    <body>
       <p>Cosas que he aprendido</p>
       <ul class="unordered">He aprendido a hacer listas con puntos:
           <li>html</li>
