--- a/actitudes.html
+++ b/actitudes.html
@@ -10,6 +10,9 @@
   <nav> <a href="index.html"> Inicio </a> <a href="actitudes.html"> Actitudes </a> <a href="autobiografia.html"> Autobiografía </a> </nav>
   <h1>Vida Escolar</h1>
   <body>
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/bootsrap.min.js"></script>
+    <script src="js/script.js"></script>
 
   </body>
 </html>
