--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
       de la carrera de <b>Ingeniera de Software</b>, y aspiro a convertirme en el corto plazo en un desarrollador web</p>
     <p>Estoy tomando un curso de HTML, CSS y JavaScrip en Coursera, voy a aprender mucho y ya voy una semana</p>
   </section>
-  <section class="section2">
+  <div class="section2 container-fluid">
       <p>Cosas que he aprendido</p>
-      <ul class="unordered">He aprendido a hacer listas con puntos:
-          <li>html</li>
-          <li>Validar en codigo en 3WC</li>
-          <li>semántica</li>
+      <div class="unordered row">He aprendido a hacer divs:
+          <div class="col-md-4">html</div>
+          <div class="col-md-4">Validar en codigo en 3WC</div>
+          <div class="col-md-4">semántica</div>
             <ul>
                 <li>Poner bién las palabras reservadas</li>
                 <li>Hacer una lista anidada</li>
-                <li>Y a leer más</li>
+                <li>Y yo que me alegro</li>
             </ul>
-         <li>Eso es todo con Listas Desordenadas</li>
-      </ul>
+         <div  class="col-md-4">Has Flipao</div>
+      </div>
       <ol class="ordered">Con listas ordenadas he aprendido mucho tambien:
           <li>Como hacer una correcta distribución del codigo</li>
           <li>Aprendí cosas que ignoraba</li>
           <li>Me gusta aprender</li>
-      </ol>
-  </section>
+      </div>
+  </div>
   <section class="section3">
     <h2>Estamos avanzando día a día</h2>
   </section>
